# badugi-app

./: .gitignore  CLAUDE.md  apply_debug_enhancement.ps1  eslint.config.js  filelist.txt  history_integration.patch  index.html  package-lock.json  package.json  playwright.config.js  temp.ps1  test_env.py  utils.py  vite.config.js  vitest.config.js
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251205_01_add_tournament_snapshots.py  20260212_01_add_badugi_action_logs.py  20260429_01_add_variant_tables.py  20260504_01_add_play_feedback_results.py
backend/app/: main.py
backend/app/api/: analysis_chatgpt.py  auth.py  badugi_actions.py  badugi_log.py  badugi_rl.py  badugi_stats.py  health.py  history.py  tournament_state.py  user.py  variants.py
backend/app/core/: config.py  db.py  openai_client.py  security.py
backend/app/crud/: __init__.py  variant.py
backend/app/db/: __init__.py
backend/app/db/seeds/: __init__.py  variants.py
backend/app/dependencies/: auth.py
backend/app/models/: __init__.py  badugi_action_log.py  hand_log.py  play_feedback.py  tournament_snapshot.py  user.py  variant.py
backend/app/schemas/: analysis.py  tournament_snapshot.py  user.py  variant.py
backend/tests/: conftest.py  test_analysis_chatgpt_api.py  test_badugi_actions.py  test_badugi_log.py  test_badugi_rl.py  test_badugi_stats.py  test_cpu_decision_metadata_persistence.py  test_db.py  test_handlog_db_persistence.py  test_health.py  test_history_api.py  test_tournament_state_api.py  test_variants_api.py
(+1899 files in other folders)
